# terminal-relay

./: .dockerignore  .env.example  .gitignore  BUSINESS.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  TODO.md  install.sh
.github/workflows/: publish.yml  release.yml
Formula/: farwatch.rb  terminal-relay.rb
crates/cli/: Cargo.toml
crates/cli/src/: account.rs  ai_tools.rs  attach.rs  common.rs  config.rs  constants.rs  handshake.rs  host.rs  input.rs  jsonl_watcher.rs  main.rs  opencode_adapter.rs  pty.rs  relay_client.rs  state.rs  structured.rs  tui.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: crypto.rs  error.rs  lib.rs  pairing.rs  protocol.rs  wire.rs
crates/protocol/tests/: generate_test_vectors.rs
crates/relay/: Cargo.toml
crates/relay/src/: auth.rs  main.rs  relay.rs
crates/terminal-relay-cli/: Cargo.toml
crates/terminal-relay-cli/src/: ai_tools.rs  attach.rs  common.rs  host.rs  main.rs  pty.rs  relay_client.rs  state.rs
crates/terminal-relay-core/: Cargo.toml
crates/terminal-relay-core/src/: crypto.rs  error.rs  lib.rs  pairing.rs  protocol.rs
crates/terminal-relay-server/: Cargo.toml
crates/terminal-relay-server/src/: main.rs  relay.rs
