[workspace]
members = [
    "crates/protocol",
    "crates/relay",
    "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.2.0"
authors = ["Jun Kai Yip"]
repository = "https://github.com/yipjunkai/farwatch"
homepage = "https://farwatch.dev"

[workspace.lints.rust]
unsafe_code = "forbid"
