[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[features]
# The "hosted" feature enables Terminal Relay hosted service integration:
# authentication (device flow, email registration, API key login), account
# management, and browser-based activation. Without this feature, the CLI
# is a standalone relay + PTY tool suitable for self-hosting.
hosted = ["dep:reqwest", "dep:open"]

[[bin]]
name = "terminal-relay"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = { version = "0.29", features = ["events"] }
dirs = "6.0"
dotenvy = "0.15"
futures-util = "0.3"
portable-pty = "0.8"
qrcode = "0.14"
rand = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
    "io-util",
    "io-std",
    "time",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
toml = "0.8"
which = "8.0"
zeroize = "1.8"
protocol = { path = "../protocol" }

# Hosted-service dependencies (optional, enabled by the "hosted" feature).
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
open = { version = "5.3.3", optional = true }
ratatui = "0.30.0"
clap_complete = "4.6.0"

[dev-dependencies]
tempfile = "3.15"
