[package]
name = "protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0"

[dependencies]
aes-gcm = "0.10"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0"
url = "2.5"
uuid = { version = "1.8", features = ["v4", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = { version = "1.8", features = ["derive"] }
