[package]
name = "relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
futures-util = "0.3"
rand = "0.8"
semver = "1.0"
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "time", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.8", features = ["v4"] }
protocol = { path = "../protocol" }
