[package]
name = "terminal-relay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "terminal-relay"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = { version = "0.29", features = ["events"] }
dirs = "6.0"
dotenvy = "0.15"
futures-util = "0.3"
portable-pty = "0.8"
qrcode = "0.14"
rand = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
    "io-util",
    "io-std",
    "time",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
which = "8.0"
zeroize = "1.8"
terminal-relay-core = { path = "../terminal-relay-core" }

[dev-dependencies]
tempfile = "3.15"
