[package]
name = "terminal-relay-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aes-gcm = "0.10"
bincode = { version = "2.0", features = ["serde"] }
hex = "0.4"
hkdf = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0"
url = "2.5"
uuid = { version = "1.8", features = ["v4", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = "1.8"
